--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -6,9 +6,20 @@ $black: #000000;
 
 // screens
 
+
+//fonts
+h1, h2, h3{
+    font-weight: 700;
+}
+
+p {
+    font-weight: 400;
+}
+
 //resets
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Sora', sans-serif;
 }
