--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,7 +46,6 @@ p {
 }
 
 #gallery {
-  overflow-x: hidden;
   padding-top: 1rem;
   padding-left: 2rem;
   padding-right: 1rem;
@@ -62,17 +61,16 @@ p {
 #aboutme {
   background-color: #d9d6d1;
 }
-#aboutme .border-img {
+#aboutme img {
+  justify-self: center;
+  align-self: center;
+  width: 30vw;
   border: solid;
   border-color: #4d4c4a;
   border-width: 2px;
-  margin: auto;
-  width: 100%;
-}
-#aboutme .border-img img {
-  width: 100%;
   display: block;
   padding-right: 0;
+  margin: auto;
 }
 #aboutme .aboutme-content {
   margin-left: 10%;
