--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,8 +1,8 @@
 // colors
 $lightgrey: #d9d6d1;
 $darkgrey: #4d4c4a;
-$white: #ffffff;
 $black: #000000;
+$blue: #85acd1;
 
 // screens
 $tablet: 800px;
