fix about me section responsiveness bug

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -184,7 +184,7 @@ p {
 
 #aboutme {
   background-color: #d9d6d1;
-  padding: 15% 10%;
+  padding: 10%;
 }
 #aboutme img {
   justify-self: center;
