--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -187,7 +187,7 @@
 
 #aboutme {
     background-color: $lightgrey;
-    padding: 15% 10%;
+    padding: 10%;
 
     img {
         justify-self: center;
