--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,6 +88,8 @@ p {
   width: 100%;
   max-width: 1350px;
   margin: 7% auto;
+  opacity: 1;
+  transition: opacity 1s ease;
 }
 #gallery h2 {
   text-transform: uppercase;
@@ -105,6 +107,10 @@ p {
     font-size: 3rem;
     margin-bottom: 30%;
   }
+}
+
+#gallery.disappear {
+  opacity: 0;
 }
 
 .gallery-card img {
